Added Archives (WIP)

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/thulanimatshoba/skinny-ninjah/issues"
   },
   "devDependencies": {
-    "@wordpress/scripts": "^17.1.0",
+    "@wordpress/scripts": "^26.5.0",
     "dir-archiver": "^1.1.1",
     "node-sass": "^8.0.0",
     "rtlcss": "^3.5.0"
@@ -43,5 +43,8 @@
     "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
     "lint:js": "wp-scripts lint-js 'js/*.js'",
     "bundle": "dir-archiver --src . --dest ../skinny-ninjah.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
